Factories with Physics Implementation
Mucked up the inheritance idea here. Level isn't a havok box if it
doesnt inherit from havok obj instead of a parent that already does so.

Changes that need to be made.
-Change level to basically be a copy of plaform with a virtual function.
-OpenGl rendering of levels.
-Enemy Level and Pickup need to create more game objects.

--- a/BaseGame/HavokOpenGL/HavokOpenGL.vcxproj
+++ b/BaseGame/HavokOpenGL/HavokOpenGL.vcxproj
@@ -96,12 +96,19 @@
     <ClCompile Include="BaseGame.cpp" />
     <ClCompile Include="BFont.cpp" />
     <ClCompile Include="box.cpp" />
+    <ClCompile Include="EnemyLevel.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="HavokObj.cpp" />
     <ClCompile Include="HvkOGLObj.cpp" />
+    <ClCompile Include="IceLevel.cpp" />
+    <ClCompile Include="Level.cpp" />
+    <ClCompile Include="LevelFactory.cpp" />
+    <ClCompile Include="LevelFactoryImplementation.cpp" />
+    <ClCompile Include="LevelNormal.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="OGL_Box.cpp" />
     <ClCompile Include="OGL_Sphere.cpp" />
+    <ClCompile Include="PickupLevel.cpp" />
     <ClCompile Include="Platform.cpp" />
     <ClCompile Include="Sphere.cpp" />
   </ItemGroup>
@@ -110,12 +117,19 @@
     <ClInclude Include="BFont.h" />
     <ClInclude Include="box.h" />
     <ClInclude Include="DebugPrint.h" />
+    <ClInclude Include="EnemyLevel.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="HavokInit.h" />
     <ClInclude Include="HavokObj.h" />
     <ClInclude Include="HvkOGLObj.h" />
+    <ClInclude Include="IceLevel.h" />
+    <ClInclude Include="Level.h" />
+    <ClInclude Include="LevelFactory.h" />
+    <ClInclude Include="LevelFactoryImplementation.h" />
+    <ClInclude Include="LevelNormal.h" />
     <ClInclude Include="OGL_Box.h" />
     <ClInclude Include="OGL_Sphere.h" />
+    <ClInclude Include="PickupLevel.h" />
     <ClInclude Include="Platform.h" />
     <ClInclude Include="random.h" />
     <ClInclude Include="Sphere.h" />
