--- a/BaseGame/HavokOpenGL/HavokOpenGL.vcxproj.filters
+++ b/BaseGame/HavokOpenGL/HavokOpenGL.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClCompile Include="LevelFactoryImplementation.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="OGL_Level.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BaseGame.h">
@@ -135,6 +138,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="LevelFactoryImplementation.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="OGL_Level.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
