Lighting and MD2 Models
Lighting code done, needs tweeking and is commeted out for the moment to
make it easier to see tests.

MD2 model code tested for the enemy and pickup models. The model I'm
using is coming out much too large (10x the platform) I will test this i
with my down models after texturing the platform. A possible fix is just
making everything else much bigger.

--- a/BaseGame/HavokOpenGL/HavokOpenGL.vcxproj
+++ b/BaseGame/HavokOpenGL/HavokOpenGL.vcxproj
@@ -93,6 +93,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="AABB3.cpp" />
     <ClCompile Include="BaseGame.cpp" />
     <ClCompile Include="BFont.cpp" />
     <ClCompile Include="box.cpp" />
@@ -105,7 +106,9 @@
     <ClCompile Include="LevelFactory.cpp" />
     <ClCompile Include="LevelFactoryImplementation.cpp" />
     <ClCompile Include="LevelNormal.cpp" />
+    <ClCompile Include="LoadTextures.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="MD2Model.cpp" />
     <ClCompile Include="OGL_Box.cpp" />
     <ClCompile Include="OGL_Level.cpp" />
     <ClCompile Include="OGL_Sphere.cpp" />
@@ -114,6 +117,7 @@
     <ClCompile Include="Sphere.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="AABB3.h" />
     <ClInclude Include="BaseGame.h" />
     <ClInclude Include="BFont.h" />
     <ClInclude Include="box.h" />
@@ -128,6 +132,9 @@
     <ClInclude Include="LevelFactory.h" />
     <ClInclude Include="LevelFactoryImplementation.h" />
     <ClInclude Include="LevelNormal.h" />
+    <ClInclude Include="LoadTextures.h" />
+    <ClInclude Include="md2.h" />
+    <ClInclude Include="MD2Model.h" />
     <ClInclude Include="OGL_Box.h" />
     <ClInclude Include="OGL_Level.h" />
     <ClInclude Include="OGL_Sphere.h" />
