--- a/BaseGame/HavokOpenGL/HavokOpenGL.vcxproj.filters
+++ b/BaseGame/HavokOpenGL/HavokOpenGL.vcxproj.filters
@@ -72,6 +72,15 @@
     <ClCompile Include="OGL_Level.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MD2Model.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="LoadTextures.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="AABB3.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BaseGame.h">
@@ -141,6 +150,18 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="OGL_Level.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="md2.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MD2Model.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="LoadTextures.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="AABB3.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
