--- a/HavokOpenGL/HavokOpenGL/HavokOpenGL.vcxproj
+++ b/HavokOpenGL/HavokOpenGL/HavokOpenGL.vcxproj
@@ -93,10 +93,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="AABB3.cpp" />
     <ClCompile Include="BaseGame.cpp" />
     <ClCompile Include="BFont.cpp" />
     <ClCompile Include="Box.cpp" />
+    <ClCompile Include="Enemy.cpp" />
+    <ClCompile Include="EnemyBig.cpp" />
+    <ClCompile Include="EnemyFactory.cpp" />
+    <ClCompile Include="EnemyFactoryImplementation.cpp" />
     <ClCompile Include="EnemyLevel.cpp" />
+    <ClCompile Include="EnemySmall.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="HavokObj.cpp" />
     <ClCompile Include="HvkOGLObj.cpp" />
@@ -108,6 +114,7 @@
     <ClCompile Include="LoadTextures.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Marker.cpp" />
+    <ClCompile Include="MD2Model.cpp" />
     <ClCompile Include="OGL_Box.cpp" />
     <ClCompile Include="OGL_Level.cpp" />
     <ClCompile Include="OGL_Sphere.cpp" />
@@ -116,11 +123,17 @@
     <ClCompile Include="Sphere.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="AABB3.h" />
     <ClInclude Include="BaseGame.h" />
     <ClInclude Include="BFont.h" />
     <ClInclude Include="Box.h" />
     <ClInclude Include="DebugPrint.h" />
+    <ClInclude Include="Enemy.h" />
+    <ClInclude Include="EnemyBig.h" />
+    <ClInclude Include="EnemyFactory.h" />
+    <ClInclude Include="EnemyFactoryImplementation.h" />
     <ClInclude Include="EnemyLevel.h" />
+    <ClInclude Include="EnemySmall.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="HavokInit.h" />
     <ClInclude Include="HavokObj.h" />
@@ -132,6 +145,8 @@
     <ClInclude Include="LevelNormal.h" />
     <ClInclude Include="LoadTextures.h" />
     <ClInclude Include="Marker.h" />
+    <ClInclude Include="md2.h" />
+    <ClInclude Include="MD2Model.h" />
     <ClInclude Include="OGL_Box.h" />
     <ClInclude Include="OGL_Level.h" />
     <ClInclude Include="OGL_Sphere.h" />
